styles.css
* {
  margin: 0;
  padding: 0;
}

body {
  background-color: #fff;
  font-family: sans-serif;
}

header {
  display: flex;
  align-items: center;
  margin: 3em auto;
  max-width: 90%;
}

header div {
  flex: auto;
  max-width: 50%;
  vertical-align: top;
}

.picture {
  padding-right: 1em;
  text-align: center;
}

.picture img {
  max-width: 100%;
}

p {
  margin-bottom: 1em;
}

h1 {
  margin-bottom: 0.25em;
}

h2 {
  margin-bottom: 0.5em;
}

.bio {
  align-self: stretch;
}

